--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>David Ramirez</title>
 </head>
 <body>
-    Hello world
+    <h1>Hello World</h1>
+    <p>My name is David</p>
 </body>
 </html>
