--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Welcome to my Website1</h1>
     <p>I'm excited to eventually learn Flask!</p>
-    <a>https://flask.palletsprojects.com/en/2.0.x/</a>
+    <a> href="url">https://flask.palletsprojects.com/en/2.0.x/</a>
     <p>Here is a picture of a Puppy from Unsplash:</p>
 </body>
 </html>
