--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Welcome to my Website1</h1>
     <p>I'm excited to eventually learn Flask!</p>
-    <p><a> href="https://flask.palletsprojects.com/en/2.0.x/">Here is a link to the official Flask Website</a></p>
+    <p><a href="https://flask.palletsprojects.com/en/2.0.x/">Here is a link to the official Flask Website</a></p>
     <p>Here is a picture of a Puppy from Unsplash:</p>
 </body>
 </html>
