--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <p>I'm excited to eventually learn Flask!</p>
     <p><a href="https://flask.palletsprojects.com/en/2.0.x/">Here is a link to the official Flask Website</a></p>
     <p>Here is a picture of a Puppy from Unsplash:</p>
-    <p><img src="puppy_pic.jpg" alt="puppy"></p>
+    <p><img src="https://images.unsplash.com/photo-1543466835-00a7907e9de1?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8ZG9nfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60"></p>
 </body>
 </html>
