--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <p>I'm excited to eventually learn Flask!</p>
     <p><a href="https://flask.palletsprojects.com/en/2.0.x/">Here is a link to the official Flask Website</a></p>
     <p>Here is a picture of a Puppy from Unsplash:</p>
-    <p><img src="https://images.unsplash.com/photo-1543466835-00a7907e9de1?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8ZG9nfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60"></p>
+    <p><img src="C:\Users\s_DavidRamir74664\Documents\Code\Flask-Bootcamp-Master\00-HTML-CSS-Bootstrap\01-HTML-Crash-Course\puppy_pic.jpeg"></p>
+    <p>Here are three reasons Flask is cool</p>
 </body>
 </html>
