--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p>I'm excited to eventually learn Flask!</p>
     <p><a href="https://flask.palletsprojects.com/en/2.0.x/">Here is a link to the official Flask Website</a></p>
     <p>Here is a picture of a Puppy from Unsplash:</p>
-    <p><img src="C:\Users\s_DavidRamir74664\Documents\Code puppy_pic.jpeg"></p>
+    <p><img src="puppy_pic.jpg"></p>
     <p>Here are three reasons Flask is cool</p>
 </body>
 </html>
