--- a/index.html
+++ b/index.html
@@ -13,5 +13,10 @@
     <p>Here is a picture of a Puppy from Unsplash:</p>
     <p><img src="puppy_pic.jpg"></p>
     <p>Here are three reasons Flask is cool</p>
+    <ol> type = "1">
+        <li>Very Simple</li>
+        <li>Lots of available add ons</li>
+        <li>Create a website in a few minutes</li>
+    </ol>
 </body>
 </html>
