--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <title>David Ramirez</title>
 </head>
 <body>
-    <h1>Welcome to my Website!</h1>
-    <p>I'm excited to eventually learn Flask!</p>
-    <p><a href="https://flask.palletsprojects.com/en/2.0.x/">Here is a link to the official Flask Website</a></p>
-    <p>Here is a picture of a Puppy from Unsplash:</p>
-    <p><img src="puppy_pic.jpg"></p>
-    <p>Here are three reasons Flask is cool</p>
-    <ol> 
-        <li>Very Simple</li>
-        <li>Lots of available add ons</li>
-        <li>Create a website in a few minutes</li>
-    </ol>
+    <h1>Puppy Adoption Page</h1>
+    <h2>Please enter your information to adopt a puppy and we'll email you back.</h2>
+    <p>Please Note: First Name, Last Name, Password, and Email are required</p>
+    <p>First Name: <input type="text" Name="" placeholder="First Name"> Last Name: <input type="text" Name="" placeholder="Last Name"></p>
+    <p>Email: <input type="email" Name="" placeholder="name@email.com"> Password: <input type="password" Name="" value=""></p>
+    <p>Are you over the age of 18?</p>
+    <p>Yes: <input type="radio" Name="Over18" id="yes" value="yesOver"> No: <input type="radio" Name="Over18" id="no" value="noOver"></p>
+    <p>Do you have a Credit Card or PayPal?</p>
+    <select name="payment"></select> <option value="cc"> Credit Card</option> <option value="pp"> Pay Pal</option>
+    
+    
 </body>
 </html>
