--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <p>Are you over the age of 18?</p>
     <p>Yes: <input type="radio" Name="Over18" id="yes" value="yesOver"> No: <input type="radio" Name="Over18" id="no" value="noOver"></p>
     <p>Do you have a Credit Card or PayPal?</p>
-    <select name="payment"></select> <option value="cc"> Credit Card</option> <option value="pp"> Pay Pal</option>
+    <select name="payment">
+    <option value="cc">Credit Card</option>
+    <option value="pp">Pay Pal</option>
     
     
 </body>
