--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     <select name="payment">
     <option value="cc">Credit Card</option>
     <option value="pp">Pay Pal</option>
-    
+    </select>
+    <p></p>
+    <input type="submit" name="" value="Submit Feedback"
     
 </body>
 </html>
