--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <title>David Ramirez</title>
 </head>
 <body>
-    <h1>Puppy Adoption Page</h1>
-    <h2>Please enter your information to adopt a puppy and we'll email you back.</h2>
-    <p>Please Note: First Name, Last Name, Password, and Email are required</p>
+    <h1>The Mexican Revolution</h1>
+    <h3>Here's a brief explenation about the Mexican revolution</h3>
+    <p>The Mexican Revolution was a major revolution that included a sequence of armed struggles that transformed Mexican culture and government. Although the regime of President Porfirio Díaz was increasingly unpopular after 31 years, there was no foreboding that a revolution was about to break out in 1910 and ended in 1920.</p>
+    <img scr="C:\Users\s_DavidRamir74664\Documents\Code\GitHub Pages\DavidRamirez\Revolution.jpg" alt="Mexican Revolution">
     <p>First Name: <input type="text" Name="" placeholder="First Name"> Last Name: <input type="text" Name="" placeholder="Last Name"></p>
     <p>Email: <input type="email" Name="" placeholder="name@email.com"> Password: <input type="password" Name="" value=""></p>
     <p>Are you over the age of 18?</p>
