--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <title>David Ramirez</title>
 </head>
 <body>
-    <h1>The Mexican Revolution</h1>
-    <h3>Here's a brief explenation about the Mexican revolution</h3>
-    <p>The Mexican Revolution was a major revolution that included a sequence of armed struggles that transformed Mexican culture and government. Although the regime of President Porfirio Díaz was increasingly unpopular after 31 years, there was no foreboding that a revolution was about to break out in 1910 and ended in 1920.</p>
-    <img scr="C:\Users\s_DavidRamir74664\Documents\Code\GitHub Pages\DavidRamirez\Revolution.jpg" alt="Mexican Revolution">
+    <h1>Welcome to my website</h1>
+    <p>I'm excited to eventually learn Flask!</p>
+    <a href="https://flask.palletsprojects.com/en/2.0.x/">Here is the official link to the Flask Website.</a>
+    <p>Here is a picture of a Puppy from Unsplash:</p>
+    <img scr="file:///C:/Users/s_DavidRamir74664/Documents/Code/Flask-Bootcamp-Master/00-HTML-CSS-Bootstrap/01-HTML-Crash-Course/puppy_pic.jpg" alt="">
     <p>First Name: <input type="text" Name="" placeholder="First Name"> Last Name: <input type="text" Name="" placeholder="Last Name"></p>
     <p>Email: <input type="email" Name="" placeholder="name@email.com"> Password: <input type="password" Name="" value=""></p>
     <p>Are you over the age of 18?</p>
