--- a/index.html
+++ b/index.html
@@ -7,22 +7,13 @@
     <title>David Ramirez</title>
 </head>
 <body>
-    <h1>Welcome to my website</h1>
+    <h1>Welcome to my Website!</h1>
     <p>I'm excited to eventually learn Flask!</p>
-    <a href="https://flask.palletsprojects.com/en/2.0.x/">Here is the official link to the Flask Website.</a>
+    <a href="https://flask.palletsprojects.com/en/2.0.x/">Here is a link to the  official Flask Website</a>
     <p>Here is a picture of a Puppy from Unsplash:</p>
     <img scr="file:///C:/Users/s_DavidRamir74664/Documents/Code/Flask-Bootcamp-Master/00-HTML-CSS-Bootstrap/01-HTML-Crash-Course/puppy_pic.jpg" alt="">
-    <p>First Name: <input type="text" Name="" placeholder="First Name"> Last Name: <input type="text" Name="" placeholder="Last Name"></p>
-    <p>Email: <input type="email" Name="" placeholder="name@email.com"> Password: <input type="password" Name="" value=""></p>
-    <p>Are you over the age of 18?</p>
-    <p>Yes: <input type="radio" Name="Over18" id="yes" value="yesOver"> No: <input type="radio" Name="Over18" id="no" value="noOver"></p>
-    <p>Do you have a Credit Card or PayPal?</p>
-    <select name="payment">
-    <option value="cc">Credit Card</option>
-    <option value="pp">Pay Pal</option>
-    </select>
-    <p></p>
-    <input type="submit" name="" value="Submit Feedback"
+    <p>Here are three reasons Flask is cool</p>
+    <ol> <li>Very Simple</li> <li>Lots of available add ons</li> <li>Create a website in a few minutes</li></ol>
     
 </body>
 </html>
