--- a/Final Assessment.html
+++ b/Final Assessment.html
@@ -4,13 +4,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML Final Assessment</title>
+    <title>David Ramirez HTML Final Assessment</title>
 </head>
 <body>
     <h1>Top Games I Have Played</h1>
     <h2>Here is a little about me and my relationship with video games</h2>
     <a href="https://docs.google.com/document/d/1YWjasPAn-euP-nqUAzKM6FRONrSCHXrXplVcD8iWd50/edit"> About Me</a>
-    <ol> <li>Valorant</li> <li>SplitGate</li> <li>GTA V Online</li> <li>Rocket League</li> <li>Rainbow Six Siege</li></ol>
-    <p>First in my list is Valorant, i have been playing valorant since when i finished my first Pc back in August of 2020 i didnt play since at the time i only played Fortite with online friends but i then i started to play again almost a year after playing in July of 2021 and since there i have been addicted to playing always trying to improve and grind ranked. Second in my list is a fairly new game still in beta called SplitGate, it recieved a ton of hype on social media and at its peak the game went from 4 thousand concurrent players to almost a half ofa million concurrent player since everybody wanted to try it out the queue time was about an hour long just to get in but i like the style of it its like halo but with portals, everytime i play games i go straight to the competative/ranked part of the game and im currently trying to get the highest rank and im almost there beind at champion 1. On my list the third game is GTA V Online, i play it one in a while since i mainly play my top  picks but when playing with a friend the new updates are fun and i never seem to get bored of it since playing it on release in 2013.</p>
+    <ol> <li>Valorant</li><ul><li>Valorant PBE</li></ul> <li>SplitGate</li> <li>GTA V Online</li> <li>Rocket League</li> <li>Rainbow Six Siege</li></ol>
+    <p>First in my list is Valorant, i have been playing valorant since when i finished my first Pc back in August of 2020 i didnt play since at the time i only played Fortite with online friends but i then i started to play again almost a year after playing in July of 2021 and since there i have been addicted to playing always trying to improve and grind ranked. Second in my list is a fairly new game still in beta called SplitGate, it recieved a ton of hype on social media and at its peak the game went from 4 thousand concurrent players to almost a half ofa million concurrent player since everybody wanted to try it out the queue time was about an hour long just to get in but i like the style of it its like halo but with portals, everytime i play games i go straight to the competative/ranked part of the game and im currently trying to get the highest rank and im almost there beind at champion 1. On my list the third game is GTA V Online, i play it one in a while since i mainly play my top  picks but when playing with a friend the new updates are fun and i never seem to get bored of it since playing it on release in 2013. I first started playing Rocket League when it went free to play and have reached Diamond 2 which is 60% of the ranks in the game, one of my friends introduced me to the game and i play it now and then but everytime i play it i seem to not forget the basis of the game. Finally there is Rainbow Six Siege, i recently got this and im starting to play it a bit more often but one of my friends had gottem me to play this, so far im 50/50 about the game.</p>
+    <img src="Valorant.jpg" width="500" length="400">
+    <img src="Splitgate.png" width="300" length="200">
+    <img src="Grand_Theft_Auto_Online.jpg" width="400" length="400">
+    <!--These images are my top 3 picks-->
+    <p></p>
+    <label name="Favorite Games">Which games do we have in common:</label>
+    <select name="Favorite Games" id="Favorite Games">
+    <option value="Select one">Select one</option>
+    <option value="Valorant">Valorant</option>
+    <option value="SplitGate">SplitGate</option>
+    <option value="GTA V Online">GTA V Online</option>
+    <option value="Rocket League">Rocket League</option>
+    <option value="Rainbow Six Siege">Rainbow Six Siege</option>
+    <option value="None">None</option>      
+    </select>
+    <p>Which game would you try out.</p>
+    <input type="radio" id="1st game" name="game" value="1st game">
+    <label for="1st game">Valorant</label><br>
+    <input type="radio" id="2nd game" name="game" value="2nd game">
+    <label for="2nd game">SplitGate</label><br>
+    <input type="radio" id="3rd game" name="game" value="3rd game">
+    <label for="3rd game">GTA V Online</label><br>
+    <input type="radio" id="4th game" name="game" value="4th game">
+    <label for="4th game">Rocket League</label><br>
+    <input type="radio" id="5th game" name="game" value="5th game">
+    <label for="5th game">Rainbow Six Siege</label>
+    <form>
+        <input type="text" placeholder="Final Thought's">
+    </form>
+    <p></p>
+    <input type="submit" name="submit" value="submit">
+
 </body>
 </html>
