--- a/Final Assessment.html
+++ b/Final Assessment.html
@@ -10,12 +10,14 @@
     <h1>Top Games I Have Played</h1>
     <h2>Here is a little about me and my relationship with video games</h2>
     <a href="https://docs.google.com/document/d/1YWjasPAn-euP-nqUAzKM6FRONrSCHXrXplVcD8iWd50/edit"> About Me</a>
-    <ol> <li>Valorant</li><ul><li>Valorant PBE</li></ul> <li>SplitGate</li> <li>GTA V Online</li> <li>Rocket League</li> <li>Rainbow Six Siege</li></ol>
+    <ol> <li>Valorant</li><ul><li>Other Modes: Valorant PBE</li></ul> <li>SplitGate</li><ul><li>Other Modes: Splitgate Ranked</li></ul><li>GTA V Online</li><ul><li>Other Modes: GTA V Story Mode </li></ul><li>Rocket League</li><ul><li>Other Modes: Rocket League Ranked</li></ul> <li>Rainbow Six Siege</li><ul><li>Other Modes: Rainbow Six Siege Training</li></ul></ol>
     <p>First in my list is Valorant, i have been playing valorant since when i finished my first Pc back in August of 2020 i didnt play since at the time i only played Fortite with online friends but i then i started to play again almost a year after playing in July of 2021 and since there i have been addicted to playing always trying to improve and grind ranked. Second in my list is a fairly new game still in beta called SplitGate, it recieved a ton of hype on social media and at its peak the game went from 4 thousand concurrent players to almost a half ofa million concurrent player since everybody wanted to try it out the queue time was about an hour long just to get in but i like the style of it its like halo but with portals, everytime i play games i go straight to the competative/ranked part of the game and im currently trying to get the highest rank and im almost there beind at champion 1. On my list the third game is GTA V Online, i play it one in a while since i mainly play my top  picks but when playing with a friend the new updates are fun and i never seem to get bored of it since playing it on release in 2013. I first started playing Rocket League when it went free to play and have reached Diamond 2 which is 60% of the ranks in the game, one of my friends introduced me to the game and i play it now and then but everytime i play it i seem to not forget the basis of the game. Finally there is Rainbow Six Siege, i recently got this and im starting to play it a bit more often but one of my friends had gottem me to play this, so far im 50/50 about the game.</p>
     <img src="Valorant.jpg" width="500" length="400">
     <img src="Splitgate.png" width="300" length="200">
     <img src="Grand_Theft_Auto_Online.jpg" width="400" length="400">
     <!--These images are my top 3 picks-->
+
+<form action="file:///C:/Users/s_DavidRamir74664/Documents/Code/GitHub%20Pages/DavidRamirez/Final%20Assessment.html" >
     <p></p>
     <label name="Favorite Games">Which games do we have in common:</label>
     <select name="Favorite Games" id="Favorite Games">
@@ -28,21 +30,23 @@
     <option value="None">None</option>      
     </select>
     <p>Which game would you try out.</p>
-    <input type="radio" id="1st game" name="game" value="1st game">
+    <input type="radio" id="Valorant" name="Try out this" value="Valorant">
     <label for="1st game">Valorant</label><br>
-    <input type="radio" id="2nd game" name="game" value="2nd game">
+    <input type="radio" id="SplitGate" name="Try out this" value="SplitGate">
     <label for="2nd game">SplitGate</label><br>
-    <input type="radio" id="3rd game" name="game" value="3rd game">
+    <input type="radio" id="GTA V Online" name="Try out this" value="GTA V Online">
     <label for="3rd game">GTA V Online</label><br>
-    <input type="radio" id="4th game" name="game" value="4th game">
+    <input type="radio" id="Rocket League" name="Try out this" value="Rocket League">
     <label for="4th game">Rocket League</label><br>
-    <input type="radio" id="5th game" name="game" value="5th game">
+    <input type="radio" id="Ranbow Six Siege" name="Try out this" value="Ranbow Six Siege">
     <label for="5th game">Rainbow Six Siege</label>
-    <form>
-        <input type="text" placeholder="Final Thought's">
-    </form>
+    
+    
+        <p></p>
+        <input type="text" name="Thoughts" placeholder="Final Thought's">
     <p></p>
-    <input type="submit" name="submit" value="submit">
-
+  
+    <input type="submit" name="Submited Data" value="Submit">
+</form>
 </body>
 </html>
