--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a class="navbar-brand" href="#">David</a>
     <ul class="nav justify-content-end">
       <li class="nav-item">
-        <a class="nav-link" href="https://davidramirez04.github.io/DavidRamirez/">Link</a>
+        <a class="nav-link" href="C:\Users\s_DavidRamir74664\Documents\Code\GitHub Pages\DavidRamirez\Oldish.html">Link</a>
       </li>
     </ul>
     </div> 
